[feature] Return presigned url to frontend to upload file

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <body>
     <div id="root">
       <form id="form-upload">
-        <input type="file" name="files" multiple>
+        <input id="file-input" type="file" name="files" multiple>
         <button>Submit</button>
       </form>
     </div>
@@ -16,5 +16,5 @@
   <script src="https://code.jquery.com/jquery-3.6.3.min.js" 
           integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU="
           crossorigin="anonymous"></script>
-  <script src="src/pages/index.js"></script>
+  <script src="src/page/index.js"></script>
 </html>
