[feat] Implement multipart upload & uploading files by chunks

--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,17 @@
   </head>
   <body>
     <div id="root">
+      <h3>Multipart Upload</h3>
       <form id="form-upload">
         <input id="file-input" type="file" name="files" multiple>
-        <button>Submit</button>
+        <p></p>
+        <button>Upload</button>
+      </form>
+      <h3>Upload chunks</h3>
+      <form id="form-chunks">
+        <input id="file-input-chunks" type="file" multiple>
+        <p></p>
+        <button>Upload</button>
       </form>
     </div>
   </body>
