[feature] Save file info to DB

--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,15 @@
         <p></p>
         <button>Upload</button>
       </form>
-      <h3>Upload chunks</h3>
+      <h3>Upload Chunks</h3>
       <form id="form-chunks">
         <input id="file-input-chunks" type="file" multiple>
+        <p></p>
+        <button>Upload</button>
+      </form>
+      <h3>Upload Folder</h3>
+      <form id="form-folder">
+        <input id="folder-input" type="file" webkitdirectory multiple>
         <p></p>
         <button>Upload</button>
       </form>
@@ -24,5 +30,5 @@
   <script src="https://code.jquery.com/jquery-3.6.3.min.js" 
           integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU="
           crossorigin="anonymous"></script>
-  <script src="src/page/index.js"></script>
+  <script type="module" src="src/page/index.js"></script>
 </html>
