--- a/public/index.html
+++ b/public/index.html
@@ -13,18 +13,24 @@
         <p></p>
         <button>Upload</button>
       </form>
-      <h3>Upload Chunks</h3>
+      <!-- <h3>Upload Chunks</h3>
       <form id="form-chunks">
         <input id="file-input-chunks" type="file" multiple>
         <p></p>
         <button>Upload</button>
-      </form>
+      </form> -->
       <h3>Upload Folder</h3>
       <form id="form-folder">
         <input id="folder-input" type="file" webkitdirectory multiple>
         <p></p>
         <button>Upload</button>
       </form>
+      <h3>File Lists</h3>
+      <div>
+        <ul id="file-list">
+          
+        </ul>
+      </div>
     </div>
   </body>
   <script src="https://code.jquery.com/jquery-3.6.3.min.js" 
