[feat] Add delete API

--- a/public/index.html
+++ b/public/index.html
@@ -26,10 +26,14 @@
         <button>Upload</button>
       </form>
       <h3>File Lists</h3>
+      <div id="current-path"></div>
+      <div id="delete-button" style="display:none">
+        <button>Delete</button>
+      </div>
       <div>
-        <ul id="file-list">
+        <div id="file-list">
           
-        </ul>
+        </div>
       </div>
     </div>
   </body>
