--- a/public/test.html
+++ b/public/test.html
@@ -7,34 +7,28 @@
   </head>
   <body>
     <div id="root">
-      <h3>Multipart Upload</h3>
-      <form id="form-upload">
-        <input id="file-input" type="file" name="files" multiple>
+      <h3>Upload File</h3>
+      <form id="form-file">
+        <input id="file-input" type="file" multiple>
         <p></p>
         <button>Upload</button>
       </form>
-      <!-- <h3>Upload Chunks</h3>
-      <form id="form-chunks">
-        <input id="file-input-chunks" type="file" multiple>
-        <p></p>
-        <button>Upload</button>
-      </form> -->
       <h3>Upload Folder</h3>
       <form id="form-folder">
         <input id="folder-input" type="file" webkitdirectory multiple>
         <p></p>
         <button>Upload</button>
       </form>
+      <!---->
       <h3>File Lists</h3>
-      <div id="current-path"></div>
+      <div id="current-path">Home</div>
       <div id="delete-button" style="display:none">
         <button>Delete</button>
       </div>
       <div>
-        <div id="file-list">
-          
-        </div>
+        <div id="file-list"></div>
       </div>
+      <!---->
     </div>
   </body>
   <script src="https://code.jquery.com/jquery-3.6.3.min.js" 
