[feat] Complete part of download function - 1. save S3 objects to local disk 2. archive to zip file 3. upload zip file to S3 and get presigned URL for download 4. return URL

--- a/public/test.html
+++ b/public/test.html
@@ -25,6 +25,9 @@
       <div id="delete-button" style="display:none">
         <button>Delete</button>
       </div>
+      <div id="download-button" style="display:none">
+        <button>Download</button>
+      </div>
       <div>
         <div id="file-list"></div>
       </div>
