[style] Change delete & download button place

--- a/public/test.html
+++ b/public/test.html
@@ -21,13 +21,13 @@
       </form>
       <!---->
       <h3>File Lists</h3>
-      <div id="current-path">Home</div>
       <div id="delete-button" style="display:none">
         <button>Delete</button>
       </div>
       <div id="download-button" style="display:none">
         <button>Download</button>
       </div>
+      <h4 id="current-path">Home</h4>
       <div>
         <div id="file-list"></div>
       </div>
