--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <!-- <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" /> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>EON Drive</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>File-Storage</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script src="bundle.js"></script>
+    <div id="root">
+      <h3>Upload File</h3>
+      <form id="form-file">
+        <input id="file-input" type="file" multiple>
+        <p></p>
+        <button>Upload</button>
+      </form>
+      <h3>Upload Folder</h3>
+      <form id="form-folder">
+        <input id="folder-input" type="file" webkitdirectory multiple>
+        <p></p>
+        <button>Upload</button>
+      </form>
+      <!---->
+      <h3>File Lists</h3>
+      <div id="current-path">Home</div>
+      <div id="delete-button" style="display:none">
+        <button>Delete</button>
+      </div>
+      <div id="download-button" style="display:none">
+        <button>Download</button>
+      </div>
+      <div>
+        <div id="file-list"></div>
+      </div>
+      <!---->
+    </div>
   </body>
+  <script src="https://code.jquery.com/jquery-3.6.3.min.js" 
+          integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU="
+          crossorigin="anonymous"></script>
+  <script type="module" src="js/index.js"></script>
 </html>
