--- a/public/index.html
+++ b/public/index.html
@@ -3,41 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>File-Storage</title>
+    <title>EON Drive</title>
     <link rel="stylesheet" href="css/index.css">
   </head>
   <body>
     <div id="root">
-      <h2>Upload File</h2>
-      <form id="form-file">
-        <input id="file-input" type="file" multiple>
-        <p></p>
-        <button>Upload</button>
-      </form>
-      <h2>Upload Folder</h2>
-      <form id="form-folder">
-        <input id="folder-input" type="file" webkitdirectory multiple>
-        <p></p>
-        <button>Upload</button>
-      </form>
-      <!---->
-      <h2>File Lists</h2>
-      <div id="current-path">Home</div>
-      <div id="delete-button" style="display:none">
-        <button>Delete</button>
-      </div>
-      <div id="download-button" style="display:none">
-        <button>Download</button>
-      </div>
-      <div>
-        <div id="file-list"></div>
-      </div>
-      <!---->
+      <h1>EON Drive</h1>
+      <p></p>
+      <a href="/login.html">Login</a>
+      <p></p>
+      <a href="/register.html">Register</a>
     </div>
   </body>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.3.min.js" 
           integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU="
           crossorigin="anonymous"></script>
-  <script src="/socket.io/socket.io.js"></script>
   <script type="module" src="js/index.js"></script>
 </html>
