[feat] Make folder in current path become clickable & refresh the file list per directory (frontend)

--- a/public/home.html
+++ b/public/home.html
@@ -26,10 +26,20 @@
         <button>Upload</button>
       </form>
 
-      <p></p>
+      <!-- <p></p>
       <h2 id="current-path">Home</h2>
-      <p></p>
-      
+      <p></p> -->
+
+      <div id="whole-path">
+        <a href="http://localhost:9999/home.html">
+          <h2>
+            <span class="path-text">
+              Home
+            </span>
+          </h2>
+        </a>
+      </div>
+
       <div id="delete-button" style="display:none">
         <button>Delete</button>
       </div>
