[feat] Add share link function

--- a/public/home.html
+++ b/public/home.html
@@ -47,7 +47,7 @@
         <button>Download</button>
       </div>
 
-      <div>
+      <div id="file-list-outer">
         <div id="file-list"></div>
       </div>
 
