[chore] Remove default account for login

--- a/public/login.html
+++ b/public/login.html
@@ -15,10 +15,10 @@
       <div>
         <form>
           <label>Email: </label>
-          <input class="input-email" name="email" type="email" pattern="^[\-\w\.]+@([\-\w]+\.)+[\-\w]{2,4}$" value="sprint1@gmail.com">
+          <input class="input-email" name="email" type="email" pattern="^[\-\w\.]+@([\-\w]+\.)+[\-\w]{2,4}$">
           <p></p>
           <label>Password: </label>
-          <input class="input-password" name="password" type="password" value="1234">
+          <input class="input-password" name="password" type="password">
           <p></p>
           <button class="input-button" type="submit">Login</button>
         </form>
