[feat] Update frontend to link current API (v2)

--- a/public/home.html
+++ b/public/home.html
@@ -28,9 +28,9 @@
       </form>
       
       <!-- <div class="blank-div"></div> -->
-
+      <!-- TODO: render this element (link) by js -->
       <div id="whole-path">
-        <a href="http://localhost:9999/home.html">
+        <a href="http://localhost:9990/home.html">
           <h2>
             <span class="path-text">
               Home
