[feat] Add show file history feature

--- a/public/home.html
+++ b/public/home.html
@@ -55,12 +55,19 @@
         </div>
         <div id="download-button" class="operation-btn" style="display:none">
           <button>Download</button>
-        </div>  
+        </div>
+        
+        <div id="history-button" class="operation-btn" style="display:none">
+          <button>History</button>
+        </div>
+
       </div>
 
       <div id="file-list-outer">
         <div id="file-list"></div>
       </div>
+      
+      <div id="file-history"></div>
 
     </div>
   </body>
