[feat] show deleted files/folders

--- a/public/home.html
+++ b/public/home.html
@@ -22,6 +22,10 @@
         <button class="logout-button">Logout</button>
       </div>
 
+      <div class="go-page">
+        <a href="/trash.html">Trash</a>
+      </div>
+
       <h3>Upload File</h3>
       <form id="form-file">
         <input id="file-input" type="file" multiple>
