[feat] change the way to show pages & combine frontend & backend

--- a/public/home.html
+++ b/public/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EON Drive</title>
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.3.min.js" 
@@ -14,7 +14,7 @@
             integrity="sha256-lSjKY0/srUM9BE3dPm+c4fBo1dky2v27Gdjm2uoZaL0=" 
             crossorigin="anonymous"></script>
     <script src="/socket.io/socket.io.js"></script>
-    <script type="module" src="js/home.js"></script>
+    <script type="module" src="/js/home.js"></script>
   </head>
   <body>
     <div id="root">
@@ -23,7 +23,7 @@
       </div>
 
       <div class="go-page">
-        <a href="/trash.html">Trash</a>
+        <a href="/trash">Trash</a>
       </div>
 
       <h3>Upload File</h3>
