--- a/public/trash.html
+++ b/public/trash.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Trash - EON Drive</title>
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="/css/index.css">
     <!-- <link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/jquery.dataTables.css" /> -->
      <!-- <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css"> -->
     
@@ -18,7 +18,7 @@
             integrity="sha256-lSjKY0/srUM9BE3dPm+c4fBo1dky2v27Gdjm2uoZaL0=" 
             crossorigin="anonymous"></script> -->
     <!-- <script src="/socket.io/socket.io.js"></script> -->
-    <script type="module" src="js/trash.js"></script>
+    <script type="module" src="/js/trash.js"></script>
   </head>
   <body>
     <div id="root">
@@ -27,7 +27,7 @@
       </div>
 
       <div class="go-page">
-        <a href="/home.html">Home</a>
+        <a href="/home">Home</a>
       </div>
 
       <div style="min-height: 20px;"></div>
